--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,6 @@ language: python
 python:
  - "2.7"
 install: "pip install -r requirements.txt"
-script: "python ./app-test.py"
+script:
+ - "mkdir /tmp/licenses"
+ - "python ./app-test.py"
